# bgfx-mapgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
game/: CMakeLists.txt
game/include/: FileUtil.h
game/shaders/: varying.def.sc
game/src/: main.cpp
src/: main.cpp
study-bgfx-mapgen/: xmake.lua
study-bgfx-mapgen/include/: Common.h  DualMap.h  DualMesh.h  Entity00.h  Entity01.h  Entity02.h  Examples.h  FileUtil.h  MapGen.h  Renderable.h  Renderables.h  ShaderUtil.h  Views.h  util.h
study-bgfx-mapgen/include/mapgen/: Common.h  DualMesh.h  MapGen.h
study-bgfx-mapgen/include/poissondisk/: PoissonDisk.h
study-bgfx-mapgen/include/renderable/: Entity.h  ListRenderable.h  Renderable.h  View.h
study-bgfx-mapgen/include/util/: LogUtil.h  MtxUtil.h
study-bgfx-mapgen/py/: t.py
study-bgfx-mapgen/shaders/: s01.frag  s01.varying.def.sc  s01.vert  s02.frag
study-bgfx-mapgen/shaders/s00/: s00.frag  s00.vert
study-bgfx-mapgen/shaders/s02/: s02.frag  s02.vert
study-bgfx-mapgen/src/: main.cpp
study-bgfx-xmake/: .gitignore  xmake.lua
study-bgfx-xmake/src/: main.cpp
